# OpenUtauWASM

./: OpenUtau.sln
.github/workflows/: build.yml
OpenUtau/: AppUtils.cs  FilePicker.cs  OpenUtau.csproj  ThemeManager.cs  ViewConstants.cs
OpenUtau.Browser/: App.axaml  App.axaml.cs  OpenUtau.Browser.csproj  OpfsService.cs  OpfsStorageBackend.cs  Program.cs  RecentPathService.cs
OpenUtau.Browser/Audio/: BrowserAudioOutput.cs
OpenUtau.Browser/Views/: BrowserDialogService.cs  MainWindow.axaml  MainWindow.axaml.cs
OpenUtau.Browser/wwwroot/: AudioBridge.js  bookmarkHelper.js  index.html  main.js  opfsHelper.js
OpenUtau.Core/: DocManager.cs  OpenUtau.Core.csproj  PlaybackManager.cs  Storage.cs
OpenUtau.Core/Util/: OS.cs  PathManager.cs  Preferences.cs
OpenUtau.Desktop/: App.axaml  App.axaml.cs  OpenUtau.Desktop.csproj
OpenUtau.Test/: OpenUtau.Test.csproj
OpenUtau/Controls/: ExpressionCanvas.cs  NotesCanvas.cs  OtoPlot.cs  PartControl.cs  PartsCanvas.cs  PhonemeCanvas.cs  PianoRoll.axaml.cs  TickBackground.cs  TrackBackground.cs  TrackHeaderCanvas.cs  WaveformImage.cs
OpenUtau/ViewModels/: IMainWindow.cs  IMainWindowMarker.cs  MainWindowViewModel.cs  PreferencesViewModel.cs  TrackHeaderViewModel.cs  TypeInDialogViewModel.cs
OpenUtau/Views/: MainWindow.axaml.cs  NoteEditStates.cs  PartEditStates.cs  ThemeEditorWindow.axaml.cs  TypeInDialog.axaml  TypeInDialog.axaml.cs
cpp/: .bazelrc  MODULE.bazel  build_wasm.sh
cpp/worldline/: BUILD.bazel  audio_output.cc  audio_output.h  worldline_wasm_api.cpp  worldline_wasm_bindings.cpp
(+4 files in other folders)
