"""OpenUtau C++ module."""
module(name = "openutau-cpp", compatibility_level = 2)

bazel_dep(name = "abseil-cpp", version = "20240116.1", repo_name = "absl")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "gtest")

bazel_dep(name = "xxhash", version = "0.8.2")

bazel_dep(name = "emsdk", version = "4.0.17")

single_version_override(
    module_name = "rules_python",
    version = "0.40.0",
)